--- a/tool/Variablefont.html
+++ b/tool/Variablefont.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zh-CN">
 
@@ -304,7 +305,7 @@
         /* 字体定义 */
         @font-face {
             font-family: 'MyVariableFont';
-            src: url('fonts/YourFont-VF.woff2') format('woff2-variations');
+            src: url('YourFont-VF.woff2') format('woff2-variations');
             font-weight: 100 900;
             font-stretch: 75% 125%;
         }
@@ -456,8 +457,10 @@
 
         <div class="preview-area">
             <div id="previewText" contenteditable="true">
-                在这里输入文字进行实时预览...
-                （支持：中英文混排、标点符号、换行）
+                字造起点黑-Beta
+		<br>设计导航-百宝库
+		<br>字体工具箱
+		<br>今国意我永然警转酬随风鹰
             </div>
         </div>
     </div>
