--- a/index.html
+++ b/index.html
@@ -833,8 +833,8 @@
 
         <!-- 按钮容器 -->
         <div class="header-buttons">
-            <a href="#" class="header-button white">在线体验</a>
-            <a href="#" class="header-button red">下载</a>
+            <a href="https://zizao.top/tool/Variablefont" class="header-button white">在线体验</a>
+            <a href="https://zizao.top/tool/Variablefont" class="header-button red">下载</a>
         </div>
     </section>
 
