--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         body {
             font-family: 'Poppins', sans-serif;
-            background: linear-gradient(45deg, #f5f7fa 0%, #c3cfe2 100%);
+            background: linear-gradient(45deg, #fafafa 0%, #f0f0f0 100%); 
             min-height: 100vh;
             overflow-x: hidden;
             color: var(--text-color);
