--- a/bao.html
+++ b/bao.html
@@ -4,7 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>科技公司品牌视觉系统 - 设计作品集</title>
+    <!-- SEO 优化 -->
+    <title>字造百宝库 - 即用即搜</title>
+    <meta name="description" content="字造产品展示，提供优质的字库产品和设计资源。了解更多关于字造的信息。">
+    <meta name="keywords" content="字造, 字库, 字体设计, 设计资源, 你的关键词">
+    <meta name="author" content="字造">
+
+    <!-- 社交媒体优化 (Open Graph) -->
+    <meta property="og:title" content="字造产品展示 - 你的关键词">
+    <meta property="og:description" content="字造产品展示，提供优质的字库产品和设计资源。了解更多关于字造的信息。">
+    <meta property="og:image" content="URL_TO_YOUR_IMAGE">
+    <meta property="og:url" content="URL_TO_YOUR_PAGE">
+    <meta property="og:type" content="website">
+
+    <link rel="icon" href="index.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -13,9 +26,7 @@
             --content-padding: 1%;
             --max-container-width: 1400px;
             --primary: #007bff;
-            /* 主要链接颜色 */
             --secondary: #0056b3;
-            /* 链接悬停颜色 */
         }
 
         * {
@@ -24,131 +35,20 @@
             box-sizing: border-box;
         }
 
-        /* 深色模式变量 */
-        body.dark-mode {
-            --dark-bg: #121212;
-            /* 更深的背景色 */
-            --dark-text: #f0f0f0;
-            /* 更亮的文本颜色 */
-            --dark-secondary: #a0a0a0;
-            /* 辅助文本颜色 */
-            --dark-card-bg: #1e1e1e;
-            /* 深色卡片背景 */
-            --dark-border: rgba(255, 255, 255, 0.1);
-            /* 深色边框 */
-            --dark-shadow: rgba(0, 0, 0, 0.5);
-            /* 更强的阴影 */
-            --dark-ellipse-bg-color: rgba(42, 95, 151, 0.3);
-            /* 深色椭圆背景 */
-            --dark-dot-color: rgba(42, 95, 151, 0.5);
-            /* 深色点颜色 */
-        }
-
-        /* 通用样式 */
         body {
             font-family: 'Inter', sans-serif;
             margin: 0;
             padding: 0;
             color: var(--secondary);
             line-height: 1.6;
-            /* 增加默认行高 */
             background-color: #fff;
-            /* 默认白色背景 */
-            transition: background-color 0.3s ease, color 0.3s ease;
-            /* 平滑过渡 */
-            overflow: hidden; /* 隐藏页面滚动条 */
+            overflow: hidden;
         }
 
         a {
             text-decoration: none;
             color: inherit;
             transition: color 0.3s ease;
-            /* 平滑过渡 */
-        }
-
-        /* 深色模式下的样式 */
-        body.dark-mode {
-            background-color: var(--dark-bg);
-            color: var(--dark-text);
-        }
-
-        body.dark-mode a {
-            color: var(--dark-text);
-        }
-
-        body.dark-mode .header,
-        body.dark-mode .nav-toggle,
-        body.dark-mode .nav-menu,
-        body.dark-mode .engine-btn,
-        body.dark-mode .search-box,
-        body.dark-mode .main-cat-item,
-        body.dark-mode .sub-category,
-        body.dark-mode .sub-cat-item,
-        body.dark-mode .tool-card,
-        body.dark-mode .footer {
-            background: var(--dark-card-bg);
-            border-color: var(--dark-border);
-            box-shadow: 0 4px 16px var(--dark-shadow);
-        }
-
-        body.dark-mode .engine-btn.active,
-        body.dark-mode .sub-cat-item.active,
-        body.dark-mode .main-cat-item.active {
-            background: #555;
-            color: #fff;
-            box-shadow: 0 4px 20px var(--dark-shadow);
-        }
-
-        body.dark-mode .tool-title {
-            color: var(--dark-text);
-        }
-
-        body.dark-mode .tool-desc {
-            color: var(--dark-secondary);
-        }
-
-        body.dark-mode .footer {
-            border-top-color: var(--dark-border);
-            color: var(--dark-secondary);
-        }
-
-        body.dark-mode .footer a {
-            color: #bbb;
-        }
-
-        body.dark-mode .ellipse-container::before {
-            background: var(--dark-ellipse-bg-color);
-        }
-
-        body.dark-mode .dot {
-            background: var(--dark-dot-color);
-        }
-
-        body.dark-mode .portfolio-item {
-            box-shadow: 0 5px 15px var(--dark-shadow);
-        }
-
-        body.dark-mode .section-title {
-            border-bottom-color: var(--dark-border);
-        }
-
-        /* 头部区域 */
-        .header {
-            position: fixed;
-            top: 15px;
-            left: 20px;
-            z-index: 100; /* 确保在 iframe 之上 */
-            transition: opacity 0.3s ease;
-        }
-
-        .logo {
-            width: clamp(60px, 8vw, 90px);
-            height: auto;
-            transition: filter 0.3s;
-        }
-
-        body.dark-mode .header a img.logo {
-            content: url("logo2.svg");
         }
 
         /* 导航菜单 */
@@ -156,27 +56,37 @@
             position: fixed;
             top: 25px;
             right: 20px;
-            width: 36px;
-            height: 36px;
+            width: 120px;
+            height: 40px;
             background: rgba(255, 255, 255, 0.95);
-            border-radius: 10px;
+            border-radius: 12px;
             cursor: pointer;
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: space-around;
             box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s, background-color 0.3s ease, box-shadow 0.3s ease;
-            z-index: 101; /* 确保在 iframe 之上 */
-            font-size: 18px;
+            z-index: 101;
+            font-size: 20px;
         }
 
         .nav-toggle:hover {
             transform: scale(1.05);
         }
 
+        .nav-toggle .logo {
+            width: 50px;
+            height: auto;
+            transition: filter 0.3s, transform 0.3s ease;
+        }
+
+        .nav-toggle .logo:hover {
+            transform: scale(1.1);
+        }
+
         .nav-menu {
             position: fixed;
-            top: 60px;
+            top: 65px;
             right: 20px;
             background: rgba(255, 255, 255, 0.98);
             border-radius: 12px;
@@ -186,9 +96,11 @@
             backdrop-filter: blur(10px);
             opacity: 0;
             transform: translateY(-10px);
-            transition: all 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease;
+            transition: all 0.3s ease;
             pointer-events: none;
-            z-index: 102; /* 确保在 iframe 之上 */
+            z-index: 102;
+            display: flex;
+            flex-direction: column;
         }
 
         .nav-menu.active {
@@ -203,47 +115,29 @@
             color: #666;
             transition: all 0.2s, color 0.3s ease;
             font-size: 14px;
+            display: flex;
+            align-items: center;
+        }
+
+        .nav-item::before {
+            content: '\f060';
+            font-family: 'Font Awesome 6 Free';
+            font-weight: 900;
+            margin-right: 8px;
+            opacity: 0;
+            transition: opacity 0.3s ease;
         }
 
         .nav-item:hover {
             background: #7c8ff710;
             color: #7c8ff7;
-        }
-
-        /* 深色模式切换按钮 */
-        .dark-mode-toggle {
-            width: 36px;
-            height: 36px;
-            background: rgba(255, 255, 255, 0.95);
-            border-radius: 10px;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s, background-color 0.3s ease, box-shadow 0.3s ease, color 0.3s ease;
-            font-size: 18px;
-            color: #333;
-            border: none;
-            /* 移除边框 */
-        }
-
-        .dark-mode-toggle:hover {
             transform: scale(1.05);
         }
 
-
-        /* 调整深色模式按钮位置 */
-        .nav-menu {
-            display: flex;
-            flex-direction: column;
+        .nav-item:hover::before {
+            opacity: 1;
         }
 
-        .nav-menu .dark-mode-toggle {
-            margin-bottom: 0.5rem;
-        }
-
-        /* 底部信息栏 */
         .footer {
             position: fixed;
             bottom: 0;
@@ -252,14 +146,11 @@
             background: rgba(255, 255, 255, 0.7);
             backdrop-filter: blur(10px);
             padding: 0.6rem;
-            /* 缩小内边距 */
             text-align: center;
             font-size: 11px;
-            /* 缩小字体 */
             color: #888;
             border-top: 1px solid rgba(124, 143, 247, 0.1);
-            transition: background-color 0.3s ease, color 0.3s ease, border-top-color 0.3s ease;
-            z-index: 100; /* 确保在 iframe 之上 */
+            z-index: 100;
         }
 
         .footer a {
@@ -272,45 +163,39 @@
             text-decoration: underline;
         }
 
-        /* iframe 样式 */
         .iframe-container {
-            position: fixed; /* 使用 fixed 定位 */
+            position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            z-index: 1; /* 确保在最底层 */
+            z-index: 1;
         }
 
         .iframe-container iframe {
             width: 100%;
             height: 100%;
             border: 0;
-            /* 移除边框 */
         }
     </style>
 </head>
 
 <body>
-    <!-- 头部LOGO -->
-    <header class="header">
-        <a href="https://zizao.top/">
-            <img src="logo.svg" class="logo" alt="Tool Galaxy">
-        </a>
-    </header>
-
     <!-- 折叠导航 -->
-    <div class="nav-toggle" id="navToggle" aria-label="切换导航">☰</div>
+    <div class="nav-toggle" id="navToggle" aria-label="切换导航">
+        <a href="https://zizao.top/">
+            <img src="logo.svg" class="logo" alt="ZAO Tool">
+        </a>
+        ☰
+    </div>
     <nav class="nav-menu" id="navMenu">
-        <!-- 深色模式切换按钮 -->
-        <div class="dark-mode-toggle" id="darkModeToggle">🌙</div>
-        <a href="https://zizao.top/" class="nav-item">首页</a>
-        <a href="fonts" class="nav-item">字库产品</a>
-        <a href="bao" class="nav-item">百宝库</a>
-        <a href="hao" class="nav-item">设计导航</a>
-        <a href="article" class="nav-item">文章教程</a>
-        <a href="tool" class="nav-item">工具箱</a>
-        <a href="about" class="nav-item">更多</a>
+        <a href="https://zizao.top" class="nav-item">首页</a>
+        <a href="https://zizao.top/hao" class="nav-item">设计导航</a>
+        <a href="https://zizao.top/bao" class="nav-item">百宝库</a>
+        <a href="#" class="nav-item">字库产品</a>
+        <a href="#" class="nav-item">设计教程</a>
+        <a href="#" class="nav-item">工具箱</a>
+        <a href="#" class="nav-item">更多</a>
     </nav>
 
     <div class="iframe-container">
@@ -318,62 +203,30 @@
             loading="lazy" referrerpolicy="no-referrer"></iframe>
     </div>
 
-    <!-- 底部信息栏 -->
     <footer class="footer">
-        &copy; 2025 字造 All rights reserved. | <a href="#">关于我们</a> | <a href="#">联系方式</a>
+        &copy; 字造 All rights reserved. | <a href="#">关于我们</a> | <a href="#">联系方式</a>
     </footer>
 
     <script>
-        // 深色模式切换功能
-        const darkModeToggle = document.getElementById('darkModeToggle');
-        const body = document.body;
-
-        // 检查 localStorage 中是否启用了深色模式
-        const isDarkMode = localStorage.getItem('darkMode') === 'enabled';
-        if (isDarkMode) {
-            body.classList.add('dark-mode');
-        }
-
-        // 设置切换按钮的初始状态
-        darkModeToggle.textContent = isDarkMode ? '☀️' : '🌙';
-
-        // 为切换按钮添加事件监听器
-        darkModeToggle.addEventListener('click', () => {
-            // 切换 body 上的 dark-mode 类
-            body.classList.toggle('dark-mode');
-
-            // 更新 localStorage
-            const darkModeEnabled = body.classList.contains('dark-mode');
-            localStorage.setItem('darkMode', darkModeEnabled ? 'enabled' : 'disabled');
-
-            // 更新切换按钮的文本
-            darkModeToggle.textContent = darkModeEnabled ? '☀️' : '🌙';
-        });
-
-        // 导航菜单功能
         const navToggle = document.getElementById('navToggle');
         const navMenu = document.getElementById('navMenu');
+        const navItems = document.querySelectorAll('.nav-item');
 
-        // 为导航切换按钮添加事件监听器
         navToggle.addEventListener('click', (e) => {
             e.stopPropagation();
             navMenu.classList.toggle('active');
         });
 
-        // 滚动时隐藏 Logo
-        let lastScrollTop = 0;
-        const header = document.querySelector('.header');
+        navItems.forEach(item => {
+            item.addEventListener('click', () => {
+                navMenu.classList.remove('active');
+            });
+        });
 
-        window.addEventListener('scroll', function() {
-            let scrollTop = window.pageYOffset || document.documentElement.scrollTop;
-            if (scrollTop > lastScrollTop) {
-                // 向下滚动
-                header.classList.add('hidden');
-            } else {
-                // 向上滚动
-                header.classList.remove('hidden');
+        document.addEventListener('click', (e) => {
+            if (!navMenu.contains(e.target) && !navToggle.contains(e.target)) {
+                navMenu.classList.remove('active');
             }
-            lastScrollTop = scrollTop;
         });
     </script>
 </body>
